# google-sheets-mcp-server

./: .gcloudignore  .gitignore  DIFY_INTEGRATION.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
src/google_sheets_mcp_server/: __init__.py  __main__.py  server.py
